--- a/SunShine.Web/Css/mobile_public.css
+++ b/SunShine.Web/Css/mobile_public.css
@@ -256,7 +256,7 @@
 }
 
     .case_nav .case_nav_icon {
-        background-color: #da251c;
+        background-color: #E15517;
         width: 22px;
         height: 22px;
         float: left;
@@ -732,7 +732,7 @@ nav .pager {
         width: 49.5%;
         margin-left: 1%;
         margin-top: 20px;
-        background: #da251c;
+        background: #E15517;
     }
 
 .case_box .case_right .mobile_success_case_box .mobile_success_case_item_current {
