--- a/SunShine.Web/Css/mobile_style.css
+++ b/SunShine.Web/Css/mobile_style.css
@@ -104,36 +104,64 @@ hr {
 
 .logo {
     float: left;
-    
 }
-.logo img {
-    min-width: 440px;
-}
-@media (min-width:750px) and (max-width:832px) {
-    .logo {
-        width:62.5%;
-    }
+
     .logo img {
-        width: 100%;
+        min-width: 440px;
+    }
+
+.telephonenumber {
+    float: left;
+    margin-left: 15px;
+}
+
+    .telephonenumber .telephonenumber_item {
+        font-size: 26px;
+        color: #E15517;
+        font-weight: bold;
+    }
+
+.telephonenumber_icon {
+    float: left;
+    padding-top: 15px;
+}
+
+    .telephonenumber_icon img {
+        width: 140px;
     }
     .site_logo_right {
-        width:37.4%;
+    float: right;
+}
+@media (min-width:750px) and (max-width:1000px) {
+    .logo {
+        width: 62.5%;
     }
+
+        .logo img {
+            width: 100%;
+        }
+
+    .site_logo_right {
+        width: 37.4%;
+    }
+
     .telephonenumber .telephonenumber_item {
-        font-size:22px;
+        font-size: 22px;
     }
+
     .telephonenumber_icon {
-        padding-top:10px;
-        width:42%;
+        padding-top: 10px;
+        width: 42%;
     }
-    .telephonenumber_icon img {
-        width:100%;
-    }
+
+        .telephonenumber_icon img {
+            width: 100%;
+        }
+
     .telephonenumber {
-        width:57%;
-        margin-left:1%;
+        width: 57%;
+        margin-left: 1%;
     }
-    
 }
 
 .phone {
@@ -150,7 +178,7 @@ hr {
     margin: 0 auto;
     max-width: 1920px;
     z-index: 9999;
-    background-color:#FFFFFF;
+    background-color: #FFFFFF;
 }
 
     .tablist ul {
@@ -470,7 +498,7 @@ hr {
 
 .cp_right {
     width: 100%;
-    min-width:750px;
+    min-width: 750px;
     margin: 0 auto;
     overflow: hidden;
 }
@@ -513,7 +541,7 @@ hr {
     height: 80px;
     color: #fff;
     display: block;
-    line-height:80px;
+    line-height: 80px;
 }
 
 .cp_right .title ul li.title_NewestProduct a {
@@ -556,7 +584,7 @@ hr {
 
                 .cp_list ul li .cp_img img {
                     width: 99%;
-                    height:auto;
+                    height: auto;
                 }
 
 .cp_list1 {
@@ -590,11 +618,11 @@ hr {
 
                 .cp_list1 ul li .cp_img img {
                     width: 99%;
-                    height:auto;
+                    height: auto;
                 }
 
 .cp_name {
-        width: 100%;
+    width: 100%;
     height: 60px;
     line-height: 60px;
     background-color: #fff;
@@ -1032,7 +1060,7 @@ hr {
 }
 
 .content1 {
-    width:100%;
+    width: 100%;
     min-width: 750px;
     margin: 0 auto;
     overflow: hidden;
@@ -1049,7 +1077,7 @@ hr {
 .partner_item_img {
     width: 46%;
     float: left;
-    margin-top:2%;
+    margin-top: 2%;
 }
 
     .partner_item_img img {
@@ -1070,41 +1098,49 @@ hr {
 .partner_item_introduction {
     margin-top: 15px;
 }
+
 @media screen and (max-width:800px) {
     .partner_item_title {
-        font-size:28px;
+        font-size: 28px;
     }
+
     .partner_item_introduction {
-        font-size:24px;
+        font-size: 24px;
     }
 }
+
 @media (min-width:800px) and (max-width:900px) {
     .partner_item_title {
-        font-size:30px;
+        font-size: 30px;
     }
+
     .partner_item_introduction {
-        font-size:26px;
+        font-size: 26px;
     }
 }
+
 @media (min-width:900px) and (max-width:1000px) {
     .partner_item_title {
-        font-size:32px;
+        font-size: 32px;
     }
+
     .partner_item_introduction {
-        font-size:28px;
+        font-size: 28px;
     }
 }
+
 @media screen and (min-width:1000px) {
     .partner_item_title {
-        font-size:36px;
+        font-size: 36px;
     }
+
     .partner_item_introduction {
-        font-size:32px;
+        font-size: 32px;
     }
 }
 
 .view_detail_btn {
-        text-align: center;
+    text-align: center;
     float: left;
     width: 150px;
     height: 52px;
@@ -1853,10 +1889,10 @@ hr {
 
         .mobile_bottom_honor .honor_header .honor_title {
             font-size: 34px;
-    font-weight: bold;
-    float: left;
-    margin-left: 14px;
-    width: 200px;
+            font-weight: bold;
+            float: left;
+            margin-left: 14px;
+            width: 200px;
         }
 
         .mobile_bottom_honor .honor_header .honor_more {
@@ -1915,12 +1951,13 @@ mobile_bottom_honor .honor_content ul li:first-child {
         }
 
     .mobile_bottom_menu .home_menu {
-        width:100%;
-        position:absolute;
-        top:-20px;
-        left:0;
-        text-align:center;
+        width: 100%;
+        position: absolute;
+        top: -20px;
+        left: 0;
+        text-align: center;
     }
-    .mobile_bottom_menu .home_menu img{
-        width:110px;
-    }
+
+        .mobile_bottom_menu .home_menu img {
+            width: 110px;
+        }
