--- a/SunShine.Web/Views/Parts/DesignService.cshtml
+++ b/SunShine.Web/Views/Parts/DesignService.cshtml
@@ -14,7 +14,7 @@
             @foreach (var item in Model)
             {
                 <div class="service_item">
-                    <a href="@Url.Action("Index","Case",new {idarticle=item.idarticle })"><img src="@Url.Content(item.img)" /></a>
+                    <a href="@Url.Action("Index","Case",new {idarticle=item.idarticle })"><img style="width:100%;" src="@Url.Content(item.img)" /></a>
                     <a href=""><div class="service_item_bottom">@item.title</div></a>
 </div>
             }
