--- a/SunShine.Web/Views/Parts/Mobile_CoreAdvance.cshtml
+++ b/SunShine.Web/Views/Parts/Mobile_CoreAdvance.cshtml
@@ -4,6 +4,9 @@
     Layout = null;
 }
 <div class="core_advance_box">
+    <div class="core_advance_title">
+        <img src="~/Images/home/mobile_advance_title.jpg" />
+    </div>
     <div>
         <img src="~/Images/home/mobile_advance_img_1.jpg" />
     </div>
