--- a/SunShine.Web/Css/mobile_home.css
+++ b/SunShine.Web/Css/mobile_home.css
@@ -2055,6 +2055,9 @@ a {
     margin-left: 10px;
     margin-top: 20px;
 }
+.service_item a img {
+    width:100%;
+}
 
     .design_service .service_item:first-child {
         margin-left: 0;
@@ -2133,7 +2136,11 @@ a {
     margin-top: 30px;
     text-align: center;
 }
-
+.core_advance_box .core_advance_title{
+    width:60%;
+    margin: 30px auto;
+    text-align: center;
+}
 @media (min-width:750px) and (max-width:1000px) {
     .core_advance_box {
         width: 100%;
