--- a/SunShine.Web/Views/Shared/_Mobile_Layout.cshtml
+++ b/SunShine.Web/Views/Shared/_Mobile_Layout.cshtml
@@ -60,7 +60,7 @@
 <body>
     <div class="center">
         <div class="logo">
-            <a href="@Url.Action("Index", "Home")">  <img src="~/Images/home/fgz_05.jpg" />    </a>
+            <a href="@Url.Action("Index", "Home")">  <img src="~/Images/home/mobile_fgz_05.jpg" />    </a>
         </div>
         <div class="site_logo_right">
             <div class="telephonenumber_icon">
