--- a/SunShine.Web/Views/Shared/_ProductItemDetailPartial.cshtml
+++ b/SunShine.Web/Views/Shared/_ProductItemDetailPartial.cshtml
@@ -13,6 +13,8 @@
         $(function () {
             $(".p_description_body > p").find("span").css("font-size", "30px");
             $(".p_description_body > p").find("strong").css("font-size", "30px");
+            //$(".p_basic > p").css("padding-top","15px");
+            $(".p_basic > p").css("line-height", "44px");
             $(".p_basic > p").find("span").css("font-size", "30px");
             $(".contact_us").find("img").css("width", "100%");
             $(".contact_us").find("img").css("height", "auto");
