--- a/SunShine.Web/Views/Parts/Mobile_CaseListItemsScroll.cshtml
+++ b/SunShine.Web/Views/Parts/Mobile_CaseListItemsScroll.cshtml
@@ -11,6 +11,9 @@
     <link rel="stylesheet" type="text/css" href="~/jsor-jcarousel/extra/jcarousel.responsive.css">
     <script src="~/jsor-jcarousel/dist/jquery.jcarousel.min.js"></script>
     <script type="text/javascript" src="~/jsor-jcarousel/extra/jcarousel.responsive.js"></script>
+    <div class="scroll_case_list_title_img">
+        <img src="~/Images/home/scroll_case_list_title_img.jpg" />
+    </div>
     <div class="scroll_case_list_box">
         @*<div class="partner_carousel">*@
         <div class="jcarousel-wrapper">
