--- a/SunShine.Web/Css/mobile_home.css
+++ b/SunShine.Web/Css/mobile_home.css
@@ -2143,3 +2143,21 @@ a {
 .img_more_width .img {
     width: 100%;
 }
+
+.scroll_case_list_title_img {
+    margin: 20px auto;
+    text-align: center;
+    width: 800px;
+    max-width: 800px;
+    overflow:hidden;
+}
+
+    .scroll_case_list_title_img img {
+        width: 100%;
+    }
+
+@media screen and (max-width:800px) {
+    .scroll_case_list_title_img img{
+        width:600px;
+    }
+}
