--- a/SunShine.Web/Views/Shared/_Layout.cshtml
+++ b/SunShine.Web/Views/Shared/_Layout.cshtml
@@ -32,13 +32,13 @@
             });
         });
 
-        //var _hmt = _hmt || [];
-        //(function () {
-        //    var hm = document.createElement("script");
-        //    hm.src = "https://hm.baidu.com/hm.js?a0c5bb60978d1e0cf6a285266591a228";
-        //    var s = document.getElementsByTagName("script")[0];
-        //    s.parentNode.insertBefore(hm, s);
-        //})();
+        var _hmt = _hmt || [];
+        (function () {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?3728a7dcb76d653308ddd00bb9c951b2";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
 
     </script>
 
