--- a/SunShine.Web/Views/Shared/_Mobile_Layout.cshtml
+++ b/SunShine.Web/Views/Shared/_Mobile_Layout.cshtml
@@ -9,6 +9,7 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="description" content="@ViewBag.Description" />
     <meta name="keywords" content="@ViewBag.Keywords" />
+    <meta name="baidu-site-verification" content="SNncM36CJh" />
     <link rel="stylesheet" href="@Url.Content("~/Css/Bootstrap/bootstrap.min.css?v=20161114")" />
     <link href="~/Css/mobile_style.css" rel="stylesheet" />
     <link href="~/Css/mobile_home.css" rel="stylesheet" />
