--- a/SunShine.Web/Views/Shared/_Layout.cshtml
+++ b/SunShine.Web/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
 
 
 </head>
-@*<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1261169669'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1261169669' type='text/javascript'%3E%3C/script%3E"));</script>*@
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1262368815'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1262368815' type='text/javascript'%3E%3C/script%3E"));</script>
 <body>
 
     @*<script src="http://stat.xiaonaodai.com/stat.php?id=11192140" language="JavaScript" type="text/javascript"></script>*@
