--- a/SunShine.Web/Views/Shared/_Layout.cshtml
+++ b/SunShine.Web/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
     <div class="tablist1" id="pro_list1">
         <div class="tablist">
             <ul>
-                <li><a href="@Url.Action("Index", "Home")">创意阳光首页</a></li>
+                <li><a href="/">创意阳光首页</a></li>
                 <li><a href="@Url.Action("List", "Product", new { categoryCode = "company_public_design" })">宣传画册设计</a></li>
                 <li><a href="@Url.Action("List", "Product", new { categoryCode = "enterprice_face_desgin" })">形象画册设计</a></li>
                 <li><a href="@Url.Action("List", "Product", new { categoryCode = "enterprice_design" })">产品画册设计</a></li>
