--- a/SunShine.Web/Views/Home/Index.cshtml
+++ b/SunShine.Web/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
         <div class="title">
             <ul id="tabs">
                 <li class="title_PopularProduct" style="background:#E15517"><a href="" class="tab">热销产品</a></li>
-                <li class="title_NewestProduct" style="background:#383431"><a href="" class="tab">最新产品</a></li>
+                <li class="title_NewestProduct" style="background:#383431"><a href="" class="tab">产品展示</a></li>
             </ul>
         </div>
         <div class="tab_box">
